Fix Footer Align

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,5 +47,12 @@
 .semester{float:left; width:100px;}
 .subject{width:100%; height: 50px; background-color: orange; border:#000000 1px solid;}
 
-
+.footer nav{
+	float:right; 
+	color: #777;
+}
+.footer a{
+	color: #777;
+	font-size:85%;
+}
 
